New links to pages, fixed pages urls

--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -149,8 +149,14 @@ initmap();
   <button onclick="window.location.href='/mall';" type="colleges">Malls</button>
   <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
 </div>
-
-
+<div class=contentbox>
+  <button onclick="window.location.href='/hotel';" type="colleges">Hotels</button>
+  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/industry';" type="colleges">Industries</button>
+  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+</div>
 
 </body>
 </html>
