Added mainpage changes on login type, database entry from luke

--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -71,7 +71,18 @@ button[type=colleges] {
     border: none;
     cursor: pointer;
     font-size: 20px;
-
+}
+button[type=recommended] {
+    position: absolute;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: #4F8FEF;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
 }
 
 </style>
@@ -114,6 +125,55 @@ function initmap() {
 }
 initmap();
  </script>
+ <br>
+{% if user.is_authenticated %}
+ <h1> Recommended For You: </h1>
+{% with user.profile.userType as type %}
+{% if type == 1 %}
+<div class=contentbox>
+  <button onclick="window.location.href='/libraries';" type="colleges">Libraries</button>
+  <img type="university"; src="https://cdn.discordapp.com/attachments/349764760818155520/368233750540058624/Libraries_Logo.jpg">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/colleges';" type="colleges">Colleges</button>
+  <img type="university"; src="https://cdn.discordapp.com/attachments/349764760818155520/368229296646389762/College_Logo.jpg">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/park';" type="colleges">Parks</button>
+  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/12246-200.png">
+</div>
+{% endif %}
+{% if type == 2 %}
+<div class=contentbox>
+  <button onclick="window.location.href='/hotel';" type="recommended">Hotels</button>
+  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/restaurant';" type="recommended">Restaurants</button>
+  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/11637-200.png">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/museum';" type="colleges">Museums</button>
+  <img type="university"; src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Museum-icon.png">
+</div>
+{% endif %}
+{% if type == 3 %}
+<div class=contentbox>
+  <button onclick="window.location.href='/industry';" type="recommended">Industries</button>
+  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/hotel';" type="recommended">Hotels</button>
+  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+</div>
+<div class=contentbox>
+  <button onclick="window.location.href='/restaurant';" type="recommended">Restaurants</button>
+  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/11637-200.png">
+</div>
+{% endif %}
+{% endwith %}
+{% endif %}
+<br>
 <br>
 <div class=contentbox>
   <button onclick="window.location.href='/colleges';" type="colleges">Colleges</button>
@@ -134,7 +194,6 @@ initmap();
   <button onclick="window.location.href='/park';" type="colleges">Parks</button>
   <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/12246-200.png">
 </div>
-<br>
 
 <div class=contentbox>
   <button onclick="window.location.href='/zoo';" type="colleges">Zoos</button>
