color change on mainpage

--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -78,7 +78,7 @@ button[type=recommended] {
     text-decoration: none;
     color: white;
     font-family: Verdana;
-    background-color: #4F8FEF;
+    background-color: #FF8F7F;
     padding: 14px 20px;
     border: none;
     cursor: pointer;
