--- a/smartcity/registerpage/templates/registerpage.html
+++ b/smartcity/registerpage/templates/registerpage.html
@@ -19,7 +19,7 @@ h1 {
   	margin-left:15%;
   	margin-top: 50px;
     width:70%;
-    height:630px;
+	height:900px;
     background-color: rgba(0,0,0,0.6);
     z-index: -1;
     border-radius: 25px;
@@ -56,7 +56,10 @@ input{
     box-sizing: border-box;
 	}
 ul.errorlist{
-height:0px;
+color: red;
+background-color: rgba(0,0,0,0);
+font-family: Verdana;
+font-size: 120%;
 }
 </style>
 
@@ -71,6 +74,15 @@ height:0px;
 
 
 <form action="/register" name="RegForm" method="post">
+<ul class="errorlist">
+{% with errors as errorlist %}
+{% if errorlist != "" %}
+There was an error with your registration. Please fix the below error: <br>
+{{errors}}
+{%endif%}
+{% endwith %}
+
+</ul>
 {% csrf_token %}
 {{ form.as_p }}
 {{ typeForm.as_p }}
@@ -78,5 +90,5 @@ height:0px;
 <p>
 <input type="submit" value="Register Now"></p>
 </form>
-</div></body>
+</div><br></body>
 </html>
