--- a/smartcity/dbview/templates/results.html
+++ b/smartcity/dbview/templates/results.html
@@ -20,7 +20,7 @@
   </tr>
   {% for college in colleges %}
   <tr>
-    <td>{{ college.college_name }}</td>
+    <td>{{ college.name }}</td>
     <td>{{ college.address }}</td>
     <td>{{ college.departments }}</td>
     <td>{{ college.email }}</td>
@@ -36,7 +36,7 @@
   </tr>
   {% for lib in libs %}
   <tr>
-    <td>{{ lib.library_name }}</td>
+    <td>{{ lib.name }}</td>
     <td>{{ lib.address }}</td>
     <td>{{ lib.phone_number }}</td>
     <td>{{ lib.email }}</td>
