Change mainpage to use john's logos

--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -132,43 +132,43 @@ initmap();
 {% if type == 1 %}
 <div class=contentbox>
   <button onclick="window.location.href='/libraries';" type="colleges">Libraries</button>
-  <img type="university"; src="https://cdn.discordapp.com/attachments/349764760818155520/368233750540058624/Libraries_Logo.jpg">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/libraries.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/colleges';" type="colleges">Colleges</button>
-  <img type="university"; src="https://cdn.discordapp.com/attachments/349764760818155520/368229296646389762/College_Logo.jpg">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/college.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/park';" type="colleges">Parks</button>
-  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/12246-200.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/park.jpg">
 </div>
 {% endif %}
 {% if type == 2 %}
 <div class=contentbox>
   <button onclick="window.location.href='/hotel';" type="recommended">Hotels</button>
-  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/hotel.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/restaurant';" type="recommended">Restaurants</button>
-  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/11637-200.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/restaurants.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/museum';" type="colleges">Museums</button>
-  <img type="university"; src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Museum-icon.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/museum.jpg">
 </div>
 {% endif %}
 {% if type == 3 %}
 <div class=contentbox>
   <button onclick="window.location.href='/industry';" type="recommended">Industries</button>
-  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/industry.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/hotel';" type="recommended">Hotels</button>
-  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/hotel.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/restaurant';" type="recommended">Restaurants</button>
-  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/11637-200.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/restaurants.jpg">
 </div>
 {% endif %}
 {% endwith %}
@@ -177,45 +177,45 @@ initmap();
 <br>
 <div class=contentbox>
   <button onclick="window.location.href='/colleges';" type="colleges">Colleges</button>
-  <img type="university"; src="https://cdn.discordapp.com/attachments/349764760818155520/368229296646389762/College_Logo.jpg">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/college.jpg">
 </div>
 
 <div class=contentbox>
   <button onclick="window.location.href='/libraries';" type="colleges">Libraries</button>
-  <img type="university"; src="https://cdn.discordapp.com/attachments/349764760818155520/368233750540058624/Libraries_Logo.jpg">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/libraries.jpg">
 </div>
 
 <div class=contentbox>
   <button onclick="window.location.href='/restaurant';" type="colleges">Restaurants</button>
-  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/11637-200.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/restaurants.jpg">
 </div>
 <br>
 <div class=contentbox>
   <button onclick="window.location.href='/park';" type="colleges">Parks</button>
-  <img type="university"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/12246-200.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/park.jpg">
 </div>
 
 <div class=contentbox>
   <button onclick="window.location.href='/zoo';" type="colleges">Zoos</button>
-  <img type="university"; src="https://cdn3.iconfinder.com/data/icons/nature-tab-bar/512/zoo-512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/zoo.jpg">
 </div>
 
 <div class=contentbox>
   <button onclick="window.location.href='/museum';" type="colleges">Museums</button>
-  <img type="university"; src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Museum-icon.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/museum.jpg">
 </div>
 <br>
 <div class=contentbox>
   <button onclick="window.location.href='/mall';" type="colleges">Malls</button>
-  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/mall.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/hotel';" type="colleges">Hotels</button>
-  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/hotel.jpg">
 </div>
 <div class=contentbox>
   <button onclick="window.location.href='/industry';" type="colleges">Industries</button>
-  <img type="university"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+  <img type="university"; src="http://jimmybot.xyz:7777/static/industry.jpg">
 </div>
 
 </body>
