map markers for colleges on mainpage

--- a/smartcity/itempage/templates/itempage.html
+++ b/smartcity/itempage/templates/itempage.html
@@ -39,7 +39,7 @@ function initmap() {
 	map.addLayer(osm);
 }
 initmap();
-var marker = L.marker([{{lat}}, {{lon}}],{ title:"QUT"}).addTo(map);
+var marker = L.marker([{{lat}}, {{lon}}],{ title:"{{name}}"}).addTo(map);
  </script>
  <div class="infobox">
  <b>Address: </b>{{address}} <br>
