CSS updates from Sandali

--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -1,7 +1,6 @@
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <style>
-
 body {
     /* background-image: url("http://3.bp.blogspot.com/-3UIjuTrbAI8/Uihk5uaH_lI/AAAAAAAAAuk/gcn5XlQ9kyI/s640/Top+10+best+Simple+Awesome+Background+Images+for+Your+Website+or+Blog2.jpg"); */
 	background-size: cover;
@@ -110,9 +109,13 @@ li.dropdown {
   color: #9DBFAF;
   height:100%;
   padding:0;
+  margin-right:0px;
+
 }
 input.searchTerm{
 	padding:0px;
+	width:300px;
+	float:left;
 }
 </style>
 
