--- a/smartcity/dbview/static/mainStyle.css
+++ b/smartcity/dbview/static/mainStyle.css
@@ -92,10 +92,12 @@ button:hover {
     left: 380px;
     top: 250px;
 }
+
 input.searchbutton{
 padding:0px;
 width:75px;
 height:21px;
+margin-right:0px;
 }
 h3{
 	position:relative;
