database updates and minor css changes

--- a/smartcity/landingpage/templates/loginpage.html
+++ b/smartcity/landingpage/templates/loginpage.html
@@ -122,7 +122,7 @@ button:hover {
 <form action="login" method="post">
 {% csrf_token %}
 <div class="container1"; id="loginFeatures">
-  <input type="text" placeholder="Enter Username" name="uname">
+  <input type="text" placeholder="Enter Username" name="username">
 </div>
 
 <div class="container2"; id="loginFeatures">
