--- a/smartcity/dbview/static/mainStyle.css
+++ b/smartcity/dbview/static/mainStyle.css
@@ -101,22 +101,23 @@ margin-right:0px;
 }
 h3{
 	position:relative;
-    color:orange;
+    color:#FFCF2F;
 	text-align:center;
-	font-size:600%;
-	font-family: 'Verdana';
-	sans-serif; 
-	font-size: 54px;
+	text-shadow:1px 1px 1px #000;
+	font: 92px/92px pacificoregular;
+	font-style: normal;
+font-weight: normal;
+font-size: 92px;
+line-height: 92px;
+	font-size: 100px;
 	font-weight: 300; 
-	line-height: 58px; 
-	background-color: #3F3F5F;
-	width:120%;
-	left:-10%;
+	line-height: 240px; 
+	width:100%;
 	transform: translate(0, -10px);
 }
 div.map{
 	width:90%;
-	height:30%;
+	height:40%;
 	margin-left:5%;
 	z-index:0;
 	}
