mainpage image fix

--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -26,14 +26,13 @@ img[type=city] {
 }
 div.city{
     background-image: url(http://jimmybot.xyz:7777/static/manhattan.jpg);
-	height:400px;
+	height:500px;
 	margin-top:-6%;
 	margin-left:-2%;
 	width:104%;
-	margin-left:0%
-	
-  background-size: cover;
-}
+	background-size:cover;
+    background-repeat: no-repeat;
+	}
 
 img[type=wood] {
     height: 750px;
