--- a/smartcity/dbview/templates/libraries.html
+++ b/smartcity/dbview/templates/libraries.html
@@ -29,7 +29,10 @@ height:initial;
   <tr>
     <th>Site Name</th>
     <th>Address</th>
+	{% if libraries.0.phone_number %}
     <th>Phone Number</th>
+		{%endif%}
+
     <th>Email</th>
   </tr>
   {% for library in libraries %}
