--- a/smartcity/dbview/static/mainStyle.css
+++ b/smartcity/dbview/static/mainStyle.css
@@ -12,6 +12,7 @@ div.content{
 	margin-right:10%;
 	margin-top:4%;
 	height:80%;
+	border-radius:12px;
 	}
 div.content.background{
 		opacity: 0.4;
@@ -106,12 +107,9 @@ h3{
 	text-shadow:1px 1px 1px #000;
 	font: 92px/92px pacificoregular;
 	font-style: normal;
-font-weight: normal;
-font-size: 92px;
-line-height: 92px;
 	font-size: 100px;
 	font-weight: 300; 
-	line-height: 240px; 
+	line-height: 360px; 
 	width:100%;
 	transform: translate(0, -10px);
 }
